# AI-Privacy-Anonymizer

./: .gitignore  LICENSE  PRD_PrivacyAnonymizer_v2.md  README.md  README_EN.md  debug_ocr.py  pyproject.toml  stderr.txt  stdout.txt
.github/workflows/: tests.yml
docs/: BENCHMARK.md  PROJECT_STATUS.md
packaging/: build_exe.ps1
scripts/: benchmark.py
src/privacy_anonymizer/: __init__.py  anonymizer.py  api.py  cli.py  compliance.py  config.py  errors.py  evaluation.py  masking.py  mcp_server.py  models.py  resolver.py  webui.py
src/privacy_anonymizer/detectors/: __init__.py  gliner_detector.py  opf_detector.py  patterns_it.py
src/privacy_anonymizer/io/: __init__.py  _ocr.py  base.py  docling_parser.py  email_files.py  images.py  json_files.py  legacy.py  office.py  pdf.py  registry.py  text_files.py  xml_files.py
tests/: test_anonymizer.py  test_completion_features.py  test_docling_parser.py  test_document_adapters.py  test_gap_implementations.py  test_gliner_detector.py  test_image_redaction.py  test_json_adapter.py  test_masking.py  test_office_adapters.py  test_opf_detector.py  test_patterns_it.py  test_resolver.py
