[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-privacy-anonymizer"
version = "0.1.0"
description = "Local-first privacy anonymizer for Italian PII."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sergio Dogliani" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
rich = ["rich>=13.0"]
office = [
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=0.6",
]
ml = [
  "gliner>=0.2.5",
]
all = [
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=0.6",
  "rich>=13.0",
  "gliner>=0.2.5",
]

[project.scripts]
privacy-anonymizer = "privacy_anonymizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_anonymizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
