[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-privacy-anonymizer"
version = "0.1.0"
description = "Local-first privacy anonymizer for Italian PII."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sergio Dogliani" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
rich = ["rich>=13.0"]
office = [
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=0.6",
]
ml = [
  "gliner>=0.2.5",
]
documents = [
  "pymupdf>=1.24",
  "pypdf>=4.0",
  "reportlab>=4.0",
  "pillow>=10.0",
  "rapidocr>=3.0",
  "onnxruntime>=1.17",
  "striprtf>=0.0.26",
  "extract-msg>=0.48",
  "xlrd>=2.0",
]
webui = [
  "gradio>=4.0",
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
]
recommended = [
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "python-pptx>=0.6",
  "pymupdf>=1.24",
  "pypdf>=4.0",
  "reportlab>=4.0",
  "pillow>=10.0",
  "rapidocr>=3.0",
  "onnxruntime>=1.17",
  "striprtf>=0.0.26",
  "extract-msg>=0.48",
  "xlrd>=2.0",
  "gradio>=4.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
  "rich>=13.0",
  "gliner>=0.2.5",
]
opf = [
  # OpenAI Privacy Filter (https://github.com/openai/privacy-filter).
  # NOTE: the package name `opf` collides with an unrelated PyPI project
  # ("Open Provenance Format"); always install via this git reference, never
  # via plain `pip install opf`.
  "opf @ git+https://github.com/openai/privacy-filter",
]
full = [
  "ai-privacy-anonymizer[recommended]",
  "ai-privacy-anonymizer[opf]",
]

[project.scripts]
privacy-anonymizer = "privacy_anonymizer.cli:main"
privacy-anonymizer-web = "privacy_anonymizer.webui:launch"
privacy-anonymizer-mcp = "privacy_anonymizer.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_anonymizer"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
